--- a/practice_1/practice_1.vcxproj.filters
+++ b/practice_1/practice_1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DoubleLikedList.c">
+    <ClCompile Include="BinaryTree.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
