--- a/practice_2/practice_2.vcxproj
+++ b/practice_2/practice_2.vcxproj
@@ -139,8 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Insertion_Sort.c" />
-    <ClCompile Include="Selection_Sort.c" />
+    <ClCompile Include="CompareRunTime.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
