실습문제3-1 리뷰 - 0회

--- a/practice_3/practice_3.vcxproj
+++ b/practice_3/practice_3.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Heap_Bottomup.c" />
     <ClCompile Include="Heap_Insertion.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
