--- a/practice_3/practice_3.vcxproj.filters
+++ b/practice_3/practice_3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Heap_Bottomup.c">
+    <ClCompile Include="InPlaceHeapSort.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
