--- a/practice_2/practice_2.vcxproj.filters
+++ b/practice_2/practice_2.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="CompareRunTime.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Insertion_Sort.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Selection_Sort.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
