--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### etc.. ###
+.idea/**
+**/.vscode/**
+
 ### macOS ###
 # General
 .DS_Store
@@ -6,7 +10,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -30,4 +33,3 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
-
