Remove: 커밋 자동화

--- a/java/coding-test/.gitignore
+++ b/java/coding-test/.gitignore
@@ -148,4 +148,6 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+*.iml
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,intellij+all
